# gemma3-270M-finetuning-ner

./: .gitignore  EXPERIMENTAL_RESULTS.md  HONEST_LIMITATIONS.md  LIMITATIONS.md  PROJECT_MAP.md  PROJECT_OVERVIEW.md  README.md  README_PROFESSIONAL.md  RESPONSE_TO_CRITICISM.md  TRAINING_GUIDE.md  analyze_training_data.py  debug_codes_1b_architecture.py  evaluate_outputs.py  improved_results.json  pyproject.toml  results.json  run_training.sh  test_distilbert_intent.py  test_edge_cases.py  test_edgecases_newmodel.py  test_examples.py  test_inference_format.py  test_intent_model_comparison.py  test_simple_sql.py  test_working_gemma3.py
.crush/: crush.db  crush.db-shm  crush.db-wal
configs/: gemma3_270m_optimized.json  spacy_ner_config.cfg
data/: gemma3_270m_capability_matrix.md  test_ambiguous.jsonl  text2sql_project_summary.md  train.jsonl  train_comprehensive.jsonl  train_date_improved.jsonl  train_intent_classification_expanded.jsonl  train_multitask_example.jsonl  train_spacy.spacy  val_comprehensive.jsonl  val_date_improved.jsonl  val_expanded.jsonl  val_hashtagger.jsonl  val_intent_classification.jsonl  val_spacy.spacy
docs/: project_reorganization.md  training_breakthrough.md
results/: codes1b_intent_improved_evaluation.json  detailed_model_metrics.json  final_breakthrough_results.json  final_results.json  text2sql_final_comparison.json
scripts/: __init__.py  analyze_dataset_balance.py  baseline_comparison.py  calculate_spacy_metrics.py  codes_intent_fixed_inference.py  comprehensive_data_expansion.py  comprehensive_pipeline.py  convert_to_spacy_format.py  create_ambiguous_test_cases.py  dataset_expansion.py  debug_gemma3_cuda.py  debug_gemma3_output.py  debug_keybert_output.py  evaluate.py  evaluate_all_models_metrics.py  evaluate_finetuned_spacy.py  evaluate_text2sql.py  expand_to_120.py  (+41 more)
(+144 files in other folders)
